--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-sqlite3": "^10.0.0",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sqlite3": "^5.1.7"
   }
 }
