--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "Georgia Vasilis",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "better-sqlite3": "^10.0.0",
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "nodemon": "^3.1.0",
+    "sqlite-async": "^1.2.0",
     "sqlite3": "^5.1.7"
   }
 }
